--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,7 +136,8 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
-    compile project(':react-native-splash-screen')
+    compile project(':react-native-splash-screen')  //启动页
+    compile project(':react-native-image-picker')  //图片选择器
 }
 
 // Run this once to be able to run the application with BUCK
