--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.1",
+		"react-native-image-crop-picker": "^0.16.0",
+		"react-native-image-picker": "^0.26.6",
 		"react-native-splash-screen": "^3.0.0",
 		"react-navigation": "^1.0.0-beta.11"
 	},
