--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,6 +102,7 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        vectorDrawables.useSupportLibrary = true
     }
     splits {
         abi {
@@ -138,6 +139,7 @@ dependencies {
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-splash-screen')  //启动页
     compile project(':react-native-image-picker')  //图片选择器
+    compile project(':react-native-image-crop-picker')  //可多选的图片选择器
 }
 
 // Run this once to be able to run the application with BUCK
